# mondigy

./: .gitignore  LICENSE  README.md  setup.cfg
example_config/: README.md  prodigy.json
examples/: example_loader_config.json
mondigy/: database.py  loader.py
