[metadata]
# replace with your username:
name = mondigy
version = 0.0.1
author = John Dagdelen
author_email = jdagdelen@berkeley.edu
description = A small wrapper for connecting MongoDB collections to Prodigy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jdagdelen/mondigy
project_urls =
    Bug Tracker = https://github.com/jdagdelen/mondigy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6